MED File + Edited Naive Bayes Classifier

--- a/Project One/My_Naive_Bayes.ipynb
+++ b/Project One/My_Naive_Bayes.ipynb
@@ -2,9 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17264\n",
+      "You have 900  test data\n",
+      "Testing accuracy approximation:  0.7633333333333333\n",
+      "You have 2100  train data\n",
+      "Training accuracy approximation:  99.61904761904762 %\n",
+      "Enter file name: this is not good at all\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "### This is a Naive Bayes Classification Class\n",
     "import nltk\n",
@@ -149,54 +163,18 @@
     "        with open(output) as m:\n",
     "            for line in m.readlines():\n",
     "                mutupo = int(line)\n",
-    "                columnOutput.append(mutupo)               \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "17627\n",
-      "You have 900  test data\n",
-      "Testing accuracy approximation:  0.7766666666666666\n",
-      "You have 2100  train data\n",
-      "Training accuracy approximation:  99.47619047619047 %\n"
-     ]
-    }
-   ],
-   "source": [
-    "classifier1 = MyNaiveBayes()\n",
-    "classifier1.trainor([\"./Project One/sentiment_labelled_sentences/amazon_cells_labelled.txt\",\n",
-    "                  \"./Project One/sentiment_labelled_sentences/imdb_labelled.txt\",\n",
-    "                  \"./Project One/sentiment_labelled_sentences/yelp_labelled.txt\"],\n",
+    "                columnOutput.append(mutupo)     \n",
+    "                \n",
+    "if __name__ == \"__main__\":\n",
+    "    classifier1 = MyNaiveBayes()\n",
+    "    classifier1.trainor([\"./sentiment_labelled_sentences/amazon_cells_labelled.txt\",\n",
+    "                  \"./sentiment_labelled_sentences/imdb_labelled.txt\",\n",
+    "                  \"./sentiment_labelled_sentences/yelp_labelled.txt\"],\n",
     "                 test=True,\n",
-    "                 split_ratio=0.30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "testing12 = \"this is not good at all\"\n",
-    "classifier1.prediction(testing12)"
+    "                 split_ratio=0.30)\n",
+    "    testing = input(\"Enter file name: \")\n",
+    "    prediction = classifier1.prediction(testing)\n",
+    "    print(prediction)"
    ]
   }
  ],
