--- a/Project Two/Minimum_Edit_Distance.ipynb
+++ b/Project Two/Minimum_Edit_Distance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,30 +22,33 @@
     "        cost = 1\n",
     "    dist = min (MED(n[:-1],m)+1, MED(n, m[:-1])+1, MED(n[:-1], m[:-1])+cost)\n",
     "    return dist\n",
-    "                                                         \n",
+    "\n",
+    "if __name__ == '__MED__':\n",
+    "    MED(sys.argv[1:])\n",
+    "\n",
     "                                                         "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "0\n"
      ]
     }
    ],
    "source": [
-    "print(MED(\"katena\",\"chaplain\"))"
+    "print(MED(\"\",\"\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,31 +78,41 @@
     "        print(dist[r])\n",
     "    \n",
     "    #return the min distance as computed above\n",
-    "    return dist[row][col]"
+    "    return dist[row][col]\n",
+    "\n",
+    "if __name__ == '__MED_Matrix__':\n",
+    "    MED(sys.argv[1:])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3, 4, 5, 6, 7, 8]\n",
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "[2, 3, 4, 3, 4, 5, 6, 7, 8]\n",
-      "[3, 4, 5, 4, 5, 6, 7, 8, 9]\n",
-      "[4, 5, 6, 5, 6, 7, 8, 9, 10]\n",
-      "[5, 6, 7, 6, 7, 8, 9, 10, 9]\n",
-      "[6, 7, 8, 7, 8, 9, 8, 9, 10]\n",
-      "10\n"
+      "[0]\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'row' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-638b8c3b4db2>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mMED_Matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-26-39786fccf20d>\u001b[0m in \u001b[0;36mMED_Matrix\u001b[1;34m(n, m)\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m     \u001b[1;31m#return the min distance as computed above\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[0mdist\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m>\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mdist\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'row' referenced before assignment"
      ]
     }
    ],
    "source": [
-    "print (MED_Matrix(\"katena\", \"chaplain\"))"
+    "print (MED_Matrix(\"\", \"\"))"
    ]
   }
  ],
