--- a/Lab4/Lab4.ipynb
+++ b/Lab4/Lab4.ipynb
@@ -2,31 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logistic Regression Model with unnormalized sentences\n",
-      "(2061, 2829) (2061,)\n",
-      "Accuracy =  0.8832909568607509\n",
-      "\n",
-      "Logistic Rregression with normalized sentences\n",
-      "(2061, 5155) (2061,)\n",
-      "Accuracy =  0.917519735166794\n",
-      "\n",
-      "Naive Bayes with unnormalized sentences\n",
-      "(2061, 2829) (2061,)\n",
-      "Accuracy =  0.8899882395050365\n",
-      "\n",
-      "Naive Bayes with normalized sentences\n",
-      "(2061, 5155) (2061,)\n",
-      "Accuracy =  0.897074287652646\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "import nltk\n",
@@ -39,6 +17,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import roc_auc_score, accuracy_score #for calculating accuracy\n",
     "from io import StringIO\n",
+    "import sys\n",
     "\n",
     "class sentimentClass:\n",
     "    \n",
@@ -91,7 +70,7 @@
     "        \n",
     "    def classification(self, sentence):\n",
     "        #Attempts the classification of any sentence parsed to it \n",
-    "        classf = panda.read_csv(StringIO(sentence), names=['review'])\n",
+    "        classf = pd.read_csv(StringIO(sentence), names=['review'])\n",
     "        X = self.curate(classf)\n",
     "        \n",
     "        #Log of probability estimates.The returned estimates for all classes are ordered by the label of classes\n",
@@ -111,34 +90,49 @@
     "            for label in classLabels:\n",
     "                f.write(str(label)+\"\\n\")\n",
     "                \n",
+    "\n",
+    "if __name__ == 'main':\n",
+    "    main(argv)\n",
+    "    \n",
+    "def main(argv):\n",
+    "    if str(argv[1])=='nb' and str(argv[2])=='u':\n",
+    "        print (\"Naive Bayes with unnormalized sentences\")\n",
+    "        nb_u = sentimentClass(normalize=False, classifier='NB')\n",
+    "        nb_u.trainFunc([\"./sentiment_labelled_sentences/amazon_cells_labelled.txt\",\n",
+    "                          \"./sentiment_labelled_sentences/imdb_labelled.txt\",\n",
+    "                          \"./sentiment_labelled_sentences/yelp_labelled.txt\"])\n",
+    "        print()\n",
+    "\n",
+    "        nb_u.classify(argv[3])\n",
     "        \n",
-    "\n",
-    "print (\"Logistic Regression Model with unnormalized sentences\")\n",
-    "lr_u = sentimentClass(normalize=False)\n",
-    "lr_u.trainFunc([\"./sentiment_labelled_sentences/amazon_cells_labelled.txt\",\n",
-    "                  \"./sentiment_labelled_sentences/imdb_labelled.txt\",\n",
-    "                  \"./sentiment_labelled_sentences/yelp_labelled.txt\"])\n",
-    "print()\n",
-    "\n",
-    "print (\"Logistic Rregression with normalized sentences\")\n",
-    "lr_n = sentimentClass(normalize=True)\n",
-    "lr_n.trainFunc([\"./sentiment_labelled_sentences/amazon_cells_labelled.txt\",\n",
-    "                  \"./sentiment_labelled_sentences/imdb_labelled.txt\",\n",
-    "                  \"./sentiment_labelled_sentences/yelp_labelled.txt\"])\n",
-    "print()\n",
-    "\n",
-    "print (\"Naive Bayes with unnormalized sentences\")\n",
-    "nb_u = sentimentClass(normalize=False, classifier='NB')\n",
-    "nb_u.trainFunc([\"./sentiment_labelled_sentences/amazon_cells_labelled.txt\",\n",
-    "                  \"./sentiment_labelled_sentences/imdb_labelled.txt\",\n",
-    "                  \"./sentiment_labelled_sentences/yelp_labelled.txt\"])\n",
-    "print()\n",
-    "\n",
-    "print (\"Naive Bayes with normalized sentences\")\n",
-    "nb_n = sentimentClass(normalize=True, classifier='NB')\n",
-    "nb_n.trainFunc([\"./sentiment_labelled_sentences/amazon_cells_labelled.txt\",\n",
-    "                  \"./sentiment_labelled_sentences/imdb_labelled.txt\",\n",
-    "                  \"./sentiment_labelled_sentences/yelp_labelled.txt\"])"
+    "    if str(argv[1])=='nb' and str(argv[2])=='n':\n",
+    "        print (\"Naive Bayes with normalized sentences\")\n",
+    "        nb_n = sentimentClass(normalize=True, classifier='NB')\n",
+    "        nb_n.trainFunc([\"./sentiment_labelled_sentences/amazon_cells_labelled.txt\",\n",
+    "                          \"./sentiment_labelled_sentences/imdb_labelled.txt\",\n",
+    "                          \"./sentiment_labelled_sentences/yelp_labelled.txt\"])\n",
+    "        print()\n",
+    "        nb_n.classify(argv[3])\n",
+    "        \n",
+    "    if str(argv[1])=='lr' and str(argv[2])=='u':\n",
+    "        print (\"Logistic Regression Model with unnormalized sentences\")\n",
+    "        lr_u = sentimentClass(normalize=False)\n",
+    "        lr_u.trainFunc([\"./sentiment_labelled_sentences/amazon_cells_labelled.txt\",\n",
+    "                          \"./sentiment_labelled_sentences/imdb_labelled.txt\",\n",
+    "                          \"./sentiment_labelled_sentences/yelp_labelled.txt\"])\n",
+    "        print()\n",
+    "        lr_u.classify(argv[3])\n",
+    "        \n",
+    "    if str(argv[1])=='lr' and str(argv[2])=='n':\n",
+    "        print (\"Logistic Rregression with normalized sentences\")\n",
+    "        lr_n = sentimentClass(normalize=True)\n",
+    "        lr_n.trainFunc([\"./sentiment_labelled_sentences/amazon_cells_labelled.txt\",\n",
+    "                          \"./sentiment_labelled_sentences/imdb_labelled.txt\",\n",
+    "                          \"./sentiment_labelled_sentences/yelp_labelled.txt\"])\n",
+    "        print()\n",
+    "        lr_n.classify(argv[3])\n",
+    "        \n",
+    "main(sys.argv)"
    ]
   },
   {
